--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,12 @@
   --clr-text-light: #A1A1AA;
   --clr-accent: #e1d29f;
   --clr-warning: tomato;
+
+  --box-shadow: rgba(0, 0, 0, 0.05) 0 54px 55px,
+  rgba(0, 0, 0, 0.05) 0 -12px 55px,
+  rgba(0, 0, 0, 0.05) 0 4px 6px,
+  rgba(0, 0, 0, 0.05) 0 12px 55px,
+  rgba(0, 0, 0, 0.05) 0 -3px 5px;
 }
 
 * {
@@ -60,11 +66,7 @@ input {
   background-color: rgba(255, 255, 255, 0.05);
   padding: 8px 15px;
   border-radius: 5px;
-  box-shadow: rgba(0, 0, 0, 0.05) 0 54px 55px,
-  rgba(0, 0, 0, 0.05) 0 -12px 55px,
-  rgba(0, 0, 0, 0.05) 0 4px 6px,
-  rgba(0, 0, 0, 0.05) 0 12px 55px,
-  rgba(0, 0, 0, 0.05) 0 -3px 5px;
+  box-shadow: var(--box-shadow);
 }
 input:focus {
   outline: none;
