--- a/src/Components/FAQ/FAQ.css
+++ b/src/Components/FAQ/FAQ.css
@@ -23,6 +23,7 @@
     rgba(0, 0, 0, 0.05) 0 -3px 5px;
 }
 .chat-question-item:hover {
+    cursor: pointer;
     color: var(--clr-dark);
     background-color: var(--clr-accent);
 }
