--- a/src/Components/CatItem/ChatItem.css
+++ b/src/Components/CatItem/ChatItem.css
@@ -27,7 +27,7 @@
     box-shadow: var(--box-shadow);
 }
 
-.chat-item__ChatGPT {
+.chat-item__ChatGPT, .chat-item__System {
     display: inline-block;
     color: var(--clr-dark);
     padding: 10px;
@@ -36,7 +36,7 @@
     box-shadow: var(--box-shadow);
 }
 
-.chat-item__ChatGPT .chat-item__content {
+.chat-item__ChatGPT.chat-item__content {
     white-space: nowrap;
     overflow: hidden;
     width: 100%;
